# open-mlpipe

./: .gitignore  .pre-commit-config.yaml  404.html  DEPLOY.md  LICENSE  README.md  blog-devto.md  blog-hashnode.md  blog-linkedin.md  blog-naukri.md  blog-post.md  blog-reddit.md  blog-twitter.md  calories.csv  errors.md  generate_test_data.py  guide.md  index.html  mkdocs.yml  mlflow.db  objects.inv  plan.md  posting-guide.md  pyproject.toml  removed_features.md  render.yaml  sitemap.xml  test_churn.csv
.github/workflows/: deploy-docs.yml  deploy-website.yml
api/config/: index.html
api/core/: index.html
api/open_mlpipe/: index.html
api/stages/: index.html
api/utils/: index.html
assets/: styles.css
concepts/metrics/: index.html
concepts/pipeline-stages/: index.html
concepts/supported-models/: index.html
configs/: classification-default.yaml  imbalanced.yaml  production.yaml  quick-test.yaml  regression-default.yaml
contributing/: index.html
docs/: contributing.md  faq.md  index.md
docs/api/: config.md  core.md  open_mlpipe.md  stages.md  utils.md
docs/assets/: styles.css
docs/concepts/: metrics.md  pipeline-stages.md  supported-models.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: cli.md  overview.md  python-api.md  yaml-config.md
examples/classification/: index.html
examples/custom-pipeline/: index.html
examples/regression/: index.html
faq/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/cli/: index.html
guide/overview/: index.html
guide/python-api/: index.html
guide/yaml-config/: index.html
overrides/: main.html
scripts/: generate_banner.py
search/: search_index.json
src/open_mlpipe/: __init__.py  cli.py
src/open_mlpipe/config/: defaults.py  resolver.py  schema.py
src/open_mlpipe/core/: context.py  pipeline.py  registry.py  stage.py
src/open_mlpipe/decisions/: __init__.py
src/open_mlpipe/deploy/: __init__.py
src/open_mlpipe/stages/: __init__.py  clean.py  compare.py  deploy.py  eda.py  evaluate.py  explain.py  feature_eng.py  load.py  preprocess.py  save.py  select.py  split.py  tune.py  validate.py
src/open_mlpipe/utils/: feature_eng_transformer.py  io.py  pager.py  typing.py  warning_display.py
tests/: conftest.py  test_clean.py  test_cli.py  test_compare.py  test_config.py  test_context.py  test_defaults.py  test_deploy.py  test_eda.py  test_evaluate.py  test_explain.py  test_feature_eng.py  test_io.py  test_load.py  test_preprocess.py  test_registry.py  test_resolver.py  test_save.py  test_select.py  test_split.py  test_stage.py  test_tune.py  test_validate.py
website/: index.html  script.js  styles.css
