[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlpipe"
version = "0.1.0"
description = "Production-level automated ML pipeline — from raw data to deployed model"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Yash Brahmankar" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "optuna>=3.6",
    "shap>=0.45",
    "imbalanced-learn>=0.12",
    "mlflow>=2.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "joblib>=1.3",
    "statsmodels>=0.14",
    "pyarrow>=14.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
aws = ["boto3>=1.28"]
full = ["evidently>=0.4", "dvc>=3.0", "feast>=0.38", "ydata-profiling>=4.0"]

[project.scripts]
mlpipe = "mlpipe.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806", "N803", "N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks unit tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]
