[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-mlpipe"
version = "1.0.6"
description = "Production-level automated ML pipeline — from raw data to deployed model in one line"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Yash Brahmankar", email = "yash@example.com" }]
keywords = ["machine-learning", "automl", "pipeline", "mlops", "scikit-learn", "xgboost", "lightgbm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.6",
    "shap>=0.45",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "scipy>=1.11",
    "joblib>=1.3",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1", "pre-commit"]
catboost = ["catboost>=1.2"]
mlflow = ["mlflow>=2.12"]
deploy = ["fastapi>=0.110", "uvicorn>=0.29", "pyarrow>=14.0", "openpyxl>=3.1"]
full = ["catboost>=1.2", "mlflow>=2.12", "fastapi>=0.110", "uvicorn>=0.29", "pyarrow>=14.0", "openpyxl>=3.1", "imbalanced-learn>=0.12", "seaborn>=0.13", "matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/yashb/mlpipe"
Documentation = "https://github.com/yashb/mlpipe#readme"
Repository = "https://github.com/yashb/mlpipe"
Issues = "https://github.com/yashb/mlpipe/issues"

[project.scripts]
openml = "open_mlpipe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/open_mlpipe"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806", "N803", "N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks unit tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]
